Fix background scrollbar

--- a/public/_/components/less/mystyle.less
+++ b/public/_/components/less/mystyle.less
@@ -11,8 +11,10 @@ body {
 .formx{
 	background: rgba(61, 62, 60, 0.5); 
 	margin-bottom: 100px;
+	width:65%;
 	overflow: auto;
 	height:550px;
+	position:fixed;
 }
 .form-bg{
 	background: rgba(232, 225, 165, 0.9); 
